--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -93,7 +93,7 @@
                                 @* <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @id = "DateOfBirth" })
+                                        @Html.TextBoxFor(x => x.DateOfBirth, AdminGeneralHelper.DateFormat(),  new { @class = "form-control", @id = "DateOfBirth" })
                                         @Html.ValidationMessageFor(x => x.DateOfBirth, null, new { id = "errorDateOfBirth" })
                                     </div>
                                 </div> *@
@@ -192,54 +192,19 @@
 </div>
 
 @section scripts {
-    <script>
+    <script type="text/javascript">
         $(function () {
-            $('#DateOfBirth').daterangepicker({
-                singleDatePicker: true,
-                showDropdowns: true,
-                showWeekNumbers: false,
-                drops: "auto",
-                opens: "right",
-                autoApply: true,
-                "locale": {
-                    // "format": "DD-MMM-YYYY",
-                    "separator": " - ",
-                    "applyLabel": "Apply",
-                    "cancelLabel": "Cancel",
-                    "fromLabel": "From",
-                    "toLabel": "To",
-                    "customRangeLabel": "Custom",
-                    "weekLabel": "W",
-                    "daysOfWeek": [
-                        "Su",
-                        "Mo",
-                        "Tu",
-                        "We",
-                        "Th",
-                        "Fr",
-                        "Sa"
-                    ],
-                    "monthNames": [
-                        "January",
-                        "February",
-                        "March",
-                        "April",
-                        "May",
-                        "June",
-                        "July",
-                        "August",
-                        "September",
-                        "October",
-                        "November",
-                        "December"
-                    ],
-                    "firstDay": 1
-                },
-                minYear: 1901,
-                maxYear: parseInt(moment().format('YYYY'), 10)
-            },
-                function (start, end, label) { });
 
+            var currentYear = parseInt(moment().format('YYYY'), 10);
+
+            $("#DateOfBirth").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                format: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                yearRange: '1901:' + currentYear
+            });
         });
     </script>
 }
