--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
@@ -74,7 +74,7 @@
                                 <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LeaveDate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.LeaveDate, new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.LeaveDate, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.LeaveDate)
                                     </div>
                                 </div>
@@ -125,54 +125,19 @@
 @Html.Partial("_ValidationScriptsPartial")
 <script src="~/js/coditech/hms/hospitaldoctorleaveschedule.js"></script>
 <script src="~/js/layout/daterangepicker.js"></script>
+
 @section scripts {
-    <script>
+    <script type="text/javascript">
         $(function () {
-            $('#LeaveDate').daterangepicker({
-                singleDatePicker: true,
-                showDropdowns: true,
-                showWeekNumbers: false,
-                drops: "auto",
-                opens: "right",
-                autoApply: true,
-                "locale": {
-        @* "format": "DD-MM-YYYY", *@
-                "separator": " - ",
-                "applyLabel": "Apply",
-                "cancelLabel": "Cancel",
-                "fromLabel": "From",
-                "toLabel": "To",
-                "customRangeLabel": "Custom",
-                "weekLabel": "W",
-                "daysOfWeek": [
-                "Su",
-                "Mo",
-                "Tu",
-                "We",
-                "Th",
-                "Fr",
-                "Sa"
-            ],
-                "monthNames": [
-                "January",
-                "February",
-                "March",
-                "April",
-                "May",
-                "June",
-                "July",
-                "August",
-                "September",
-                "October",
-                "November",
-                "December"
-            ],
-                "firstDay": 1
-                                                                                                                                                    },
-            minYear: new Date().getFullYear(),
-            maxYear: new Date().getFullYear() + 1
-                                                                                                                                                },
-            function (start, end, label) { });
-                                                                                                                                            });
+           
+            $("#LeaveDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                format: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true
+            });
+        });
     </script>
 }
+
