--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
@@ -59,7 +59,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FoundationDatetime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FoundationDatetime, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.FoundationDatetime, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "readonly" })
                                         @Html.ValidationMessageFor(x => x.FoundationDatetime)
                                     </div>
                                 </div>
@@ -94,13 +94,11 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralCityMasterId, new { @class = "form-label required" })
-                                        @*  @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel() { DropdownType = DropdownTypeEnum.City.ToString(), DropdownName = "GeneralCityMasterId", DropdownSelectedValue = Model.GeneralCityMasterId.ToString()}) *@
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.AllCities.ToString(),
                                    DropdownName = "GeneralCityMasterId",
-                                   DropdownSelectedValue = Model.GeneralCityMasterId
-                                    .ToString()
+                                   DropdownSelectedValue = Model.GeneralCityMasterId.ToString()
                                })
                                         @Html.ValidationMessageFor(x => x.GeneralCityMasterId)
                                     </div>
@@ -142,54 +140,17 @@
         </div>
     </div>
 </div>
+
 @section scripts {
-    <script>
+    <script type="text/javascript">
         $(function () {
-            $('#FoundationDatetime').daterangepicker({
-                singleDatePicker: true,
-                showDropdowns: true,
-                showWeekNumbers: false,
-                drops: "auto",
-                opens: "right",
-                autoApply: true,
-                "locale": {
-                    // "format": "DD-MMM-YYYY",
-                    "separator": " - ",
-                    "applyLabel": "Apply",
-                    "cancelLabel": "Cancel",
-                    "fromLabel": "From",
-                    "toLabel": "To",
-                    "customRangeLabel": "Custom",
-                    "weekLabel": "W",
-                    "daysOfWeek": [
-                        "Su",
-                        "Mo",
-                        "Tu",
-                        "We",
-                        "Th",
-                        "Fr",
-                        "Sa"
-                    ],
-                    "monthNames": [
-                        "January",
-                        "February",
-                        "March",
-                        "April",
-                        "May",
-                        "June",
-                        "July",
-                        "August",
-                        "September",
-                        "October",
-                        "November",
-                        "December"
-                    ],
-                    "firstDay": 1
-                },
-                minYear: 1901,
-                maxYear: parseInt(moment().format('YYYY'), 10)
-            },
-                function (start, end, label) { });
+            $("#FoundationDatetime").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                format: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true
+            });
         });
     </script>
 }
