--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPerson.cshtml
@@ -58,14 +58,14 @@
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
-            @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @readonly = "true" })
+            @Html.TextBoxFor(x => x.DateOfBirth, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
             @Html.ValidationMessageFor(x => x.DateOfBirth)
         </div>
     </div>
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.AnniversaryDate, new { @class = "form-label" })
-            @Html.TextBoxFor(x => x.AnniversaryDate, new { @class = "form-control", @readonly = "true" })
+            @Html.TextBoxFor(x => x.AnniversaryDate, AdminGeneralHelper.DateFormat(), new { @class = "form-control", @readonly = "true" })
             @Html.ValidationMessageFor(x => x.AnniversaryDate)
         </div>
     </div>
