--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseDepartment/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseDepartment/List.cshtml
@@ -40,3 +40,4 @@
     </div>
 </div>
 <!-- end page content -->
+<script src="~/js/coditech/Organisation/OrganisationCentrewiseDepartment.js"></script>
