--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/CreateEdit.cshtml
@@ -4,37 +4,31 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
+
 <!-- Page Content-->
-<div class="page-content">
+<div class="page-content mt-5">
     <div class="container-fluid">
-        <!-- Page-Title -->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-title-box">
-                    <div class="row">
-                        <div class="col">
-                            @if (Model.EmployeeDesignationMasterId > 0)
-                            {
-                                <h4 class="page-title"> Update Designation</h4>
-                            }
-                            else
-                            {
-                                <h4 class="page-title">Create Designation</h4>
-                            }
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div><!--end page-title-box-->
-            </div><!--end col-->
-        </div><!--end row-->
-        <!-- end page title end breadcrumb -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
+                    <div class="card-header">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                @if (Model.EmployeeDesignationMasterId > 0)
+                                {
+                                    <h4 class="card-title">Update Designation</h4>
+                                }
+                                else
+                                {
+                                    <h4 class="card-title">Create Designation</h4>
+                                }
+                            </div><!--end col-->
+                        </div>  <!--end row-->
+                    </div>
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.EmployeeDesignationMasterId)
-                            @Html.HiddenFor(m => m.IsActive)
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
@@ -52,31 +46,30 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DesignationLevel, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.DesignationLevel, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.DesignationLevel, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.DesignationLevel)
                                     </div>
                                 </div>
-                               @*  <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                            @Html.LabelFor(x => x.IsActive, new { @class = "form-check-label" })
-                                        </div>
-                                    </div>
-                                </div> *@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Grade, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Grade, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.Grade, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.Grade, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Grade)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.RelatedWith, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.RelatedWith, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.RelatedWith)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                            @Html.LabelFor(x => x.IsActive, new { @class = "form-check-label" })
                                         </div>
                                     </div>
                                 </div>
