--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
@@ -59,7 +59,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FoundationDatetime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FoundationDatetime, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.FoundationDatetime, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "readonly" })
                                         @Html.ValidationMessageFor(x => x.FoundationDatetime)
                                     </div>
                                 </div>
@@ -143,53 +143,30 @@
     </div>
 </div>
 @section scripts {
-    <script>
+    <script type="text/javascript">
         $(function () {
-            $('#FoundationDatetime').daterangepicker({
-                singleDatePicker: true,
-                showDropdowns: true,
-                showWeekNumbers: false,
-                drops: "auto",
-                opens: "right",
-                autoApply: true,
-                "locale": {
-                    // "format": "DD-MMM-YYYY",
-                    "separator": " - ",
-                    "applyLabel": "Apply",
-                    "cancelLabel": "Cancel",
-                    "fromLabel": "From",
-                    "toLabel": "To",
-                    "customRangeLabel": "Custom",
-                    "weekLabel": "W",
-                    "daysOfWeek": [
-                        "Su",
-                        "Mo",
-                        "Tu",
-                        "We",
-                        "Th",
-                        "Fr",
-                        "Sa"
-                    ],
-                    "monthNames": [
-                        "January",
-                        "February",
-                        "March",
-                        "April",
-                        "May",
-                        "June",
-                        "July",
-                        "August",
-                        "September",
-                        "October",
-                        "November",
-                        "December"
-                    ],
-                    "firstDay": 1
+            $("#FoundationDatetime").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                // showOtherMonths: true,
+                gotoCurrent: true,
+                clearBtn: true,
+                showButtonPanel: true,
+                closeText: 'Clear',
+                onClose: function (dateText, inst) {
+                    if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
+                        document.getElementById(this.id).value = '';
+                    }
                 },
-                minYear: 1901,
-                maxYear: parseInt(moment().format('YYYY'), 10)
-            },
-                function (start, end, label) { });
+                maxDate: new Date(),
+                // onSelect: function (dateText) {
+                //     debugger;
+                //     console.log("Selected date: " + dateText + "; input's current value: " + this.value);
+                // }
+            });
         });
     </script>
 }
