--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberFollowUpList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberFollowUpList.cshtml
@@ -38,3 +38,7 @@
 
 <!-- end page content -->
 @Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", addFollowUpModel)
+@section scripts {
+    <!-- end page content -->
+    <script src="~/js/coditech/gym/gymmemberdetails.js"></script>
+}
