--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/List.cshtml
@@ -50,4 +50,7 @@
         </div>
     </div>
 </div>
+@section scripts {
 <!-- end page content -->
+<script src="~/js/coditech/gym/gymmemberdetails.js"></script>
+}
