--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/_EmployeeServiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/_EmployeeServiceList.cshtml
@@ -21,10 +21,10 @@
                         <tr>
                             <td>@item.EmployeeCode</td>
                             <td>@item.CurrentEmployeeDesignation</td>
-                            <td>@item.JoiningDate.CoditechDateFormat()</td>
-                            <td>@item.PromotionDemotionDate.CoditechDateFormat()</td>
+                            <td>@item.JoiningDate.ToCoditechDateFormat()</td>
+                            <td>@item.PromotionDemotionDate.ToCoditechDateFormat()</td>
                             <td>@item.EmployeeStage</td>
-                            <td>@item.DateOfLeaving.CoditechDateFormat()</td>
+                            <td>@item.DateOfLeaving.ToCoditechDateFormat()</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsCurrentPosition)
                             </td>
