--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -34,7 +34,8 @@
                         @using (Html.BeginForm("UpdateEmployeeOtherDetail", controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.EmployeeId)
-                            <div class="row">                                
+                            @Html.HiddenFor(m => m.EmployeeDesignationMasterId)
+                            <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PersonCode, new { @class = "form-label" })
@@ -44,22 +45,25 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">                                        
-                                    </div>
-                                </div>
-                              
-                                <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.PANCardNumber, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.PANCardNumber, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.PANCardNumber)
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                         </div>
                                     </div>
-                            
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PANCardNumber, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.PANCardNumber, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PANCardNumber)
+                                    </div>
+                                </div>
+
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.UANNumber, new { @class = "form-label" })
@@ -70,13 +74,13 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PassportNumber, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.PassportNumber, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.PassportNumber, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PassportNumber)
                                     </div>
-                                </div>                            
+                                </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AdharCardNumber, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.AdharCardNumber, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.AdharCardNumber, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.AdharCardNumber)
                                     </div>
@@ -94,7 +98,7 @@
                                         @Html.TextBoxFor(x => x.BankAccountNumber, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.BankAccountNumber)
                                     </div>
-                                </div>                            
+                                </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.BankIFSCCode, new { @class = "form-label" })
@@ -110,14 +114,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                <div class="mb-3">
-                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                    <div class="form-check">
-                                        @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                    </div>
-                                </div>
-                            </div>
+                                
                             </div>
 
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
