--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
@@ -25,7 +25,7 @@
             <div class="col-lg-12">
                 <div class="mb-3">
                     <label class="form-label" for="CreatedDate">Date</label>
-                    @Html.TextBoxFor(x => x.CreatedDate, new { @class = "form-control", disabled = "disabled" })
+                    @Html.TextBoxFor(x => x.CreatedDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                     @Html.ValidationMessageFor(x => x.CreatedDate)
                 </div>
                 <div class="mb-3">
@@ -46,3 +46,29 @@
     </div>
 }
 @Html.Partial("_ValidationScriptsPartial")
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(function () {
+            $("#CreatedDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "-100:+100",
+                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                gotoCurrent: true,
+                clearBtn: true,
+                showButtonPanel: true,
+                closeText: 'Clear',
+                onClose: function (dateText, inst) {
+                    if ($(window.event.srcElement).hasClass('ui-datepicker-close')) {
+                        document.getElementById(this.id).value = '';
+                    }
+                },
+                minDate: "-1M",
+                maxDate: new Date()
+            });
+        });
+    });
+</script>
