--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_HospitalDoctorVisitingChargesByDoctorIdList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_HospitalDoctorVisitingChargesByDoctorIdList.cshtml
@@ -18,11 +18,11 @@
                     foreach (var item in Model?.HospitalDoctorVisitingChargesList)
                     {
                         <tr>
-                            <td>@item.FromDate.ToShortDateString()</td>
+                            <td>@item.FromDate.ToCoditechDateFormat()</td>
                             <td>
                                 @if (item.UptoDate != null)
                                 {
-                                    @Convert.ToDateTime(@item.UptoDate).ToShortDateString()
+                                    @Convert.ToDateTime(@item.UptoDate).ToCoditechDateFormat()
                                 }
                             </td>
                             <td>@item.AppointmentType</td>
