--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
@@ -22,7 +22,7 @@
 							<td>
 								<i class="fas fa-user"></i> @item.FirstName @item.LastName
 							</td>
-							<td class="date"><i class="fa fa-calendar icon"></i> @item.TransactionDate.ToShortDateString()</td>
+							<td class="date"><i class="fa fa-calendar icon"></i> @item.TransactionDate.ToCoditechDateFormat()</td>
 							<td>@item.PlanType</td>
 							<td>
 								<div class="plan-details">
@@ -30,7 +30,7 @@
 									@if (item.PlanDurationType.Equals(AdminConstants.PlanDurationType, StringComparison.InvariantCultureIgnoreCase))
 									{
 										<span style="font-size: 12px; font-style: italic;">
-											<i class="fa fa-calendar-alt icon"></i> @item.PlanStartDate.ToShortDateString() to @item.PlanDurationExpirationDate.ToShortDateString()
+											<i class="fa fa-calendar-alt icon"></i> @item.PlanStartDate.ToCoditechDateFormat() to @item.PlanDurationExpirationDate.ToCoditechDateFormat()
 										</span>
 									}
 									else if (item.PlanDurationType.Equals(AdminConstants.PlanSessionType, StringComparison.InvariantCultureIgnoreCase))
