--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Coditech.Admin.Utilities;
 @using Coditech.Common.API.Model;
 @{
-    //string title = System.Convert.ToString(RARIndiaSetting.ProjectTitle);
     string messageData = Convert.ToString(TempData["Notifications"]);
     UserModel userData = SessionHelper.GetDataFromSession<UserModel>(AdminConstants.UserDataSession);
     string applicationLogoPath = CoditechAdminSettings.ApplicationLogoPath;
@@ -37,8 +36,7 @@
     <link href="~/css/layout/jstree.css" rel="stylesheet" />
 </head>
 
-<body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="" style="background: url(@applicationLayoutBackground);
-}">
+<body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="" style="background: url(@applicationLayoutBackground);">
     @Html.Partial("~/Views/Shared/_Loader.cshtml")
 
     @if (userData != null)
