--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -1,112 +1,54 @@
 ﻿@using Coditech.Admin.ViewModel
 @model UserLoginViewModel
 @{
-    Layout = null;
-    string applicationLogoPath = CoditechAdminSettings.ApplicationLogoPath;
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+    ViewBag.Title = "Login";
 }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta content="" name="description">
-    <meta content="" name="author">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- App favicon -->
-    <link rel="shortcut icon" href="~/favicon.ico">
-    <!-- App css -->
-    <link href="~/css/login/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="~/css/login/icons.min.css" rel="stylesheet" type="text/css">
-	<link href="~/css/login/app.min.css" rel="stylesheet" type="text/css">
-	<link href="~/css/layout/site.css" rel="stylesheet" />
-</head>
-
-<body class="account-body accountbg" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="">
-    <!-- Log In page -->
-    <div class="container login-page-wrapper">
-        <div class="row vh-100 d-flex justify-content-center">
-            <div class="col-12 align-self-center">
-                <div class="row">
-                    <div class="col-lg-5 mx-auto">
-                        <div class="card">
-                            <div class="card-body p-0 auth-header-box">
-                                <div class="text-center p-3">
-                                    <a href="#" class="logo logo-admin">
-                                        <img src="@applicationLogoPath" height="50" alt="logo" class="auth-logo">
-                                    </a>
-                                    @* <h4 class="fw-semibold text-white font-18">Sign In</h4> *@
-                                </div>
-                            </div>
-                            <div class="card-body p-0 auth-content">
-                                <ul class="nav-border nav nav-pills" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="/user/login" role="tab">Log In</a>
-                                    </li>
-                                </ul>
-                                <!-- Tab panes -->
-                                <div class="tab-content">
-                                    <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
-                                        @using (Html.BeginForm("Login", "User", FormMethod.Post))
-                                        {
-                                            @Html.AntiForgeryToken()
-                                            <div class="form-group mb-2">
-                                                @Html.LabelFor(x => x.UserName, new { @class = "form-label" })
-                                                <div class="input-group">
-                                                    @Html.TextBoxFor(x=>x.UserName, new{@class="form-control" ,placeholder="username..."})
-                                                </div>
-                                                @Html.ValidationMessageFor(m => m.UserName, null)
-                                            </div>
-
-                                            <div class="form-group mb-2">
-                                                @Html.LabelFor(x => x.Password, new { @class = "form-label" })
-                                                <div class="input-group">
-                                                    @Html.TextBoxFor(x=>x.Password, new{@class="form-control" ,type="password" ,placeholder="Password here..."})
-                                                </div>
-                                                @Html.ValidationMessageFor(m => m.Password, null)
-                                                @Html.ValidationMessageFor(m => m.ErrorMessage, null)
-                                            </div>
-
-                                            <div class="form-group row my-3">
-                                                <div class="col-sm-6">
-                                                    <div class="custom-control custom-switch switch-success">
-                                                        <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
-                                                        <label class="form-label text-muted" for="customSwitchSuccess">Remember me</label>
-                                                    </div>
-                                                </div>
-                                                <div class="col-sm-6 text-end">
-                                                    <a href="/user/resetpassword" class="text-muted font-13"><i class="dripicons-lock"></i>Forgot password?</a>
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group mb-0 row">
-                                                <div class="col-12">
-                                                    <button class="btn btn-primary w-100 waves-effect waves-light">Log In <i class="fas fa-sign-in-alt ms-1"></i></button>
-                                                </div>
-                                            </div> 
-                                            @Html.HiddenFor(x=>x.ReturnUrl)
-                                        }
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-body bg-light-alt text-center auth-footer">
-                                <span class="text-muted d-none d-sm-inline-block">
-                                    Copyright © @System.DateTime.Now.Year <a href="http://coditechsoftware.com/" target="_blank">Coditech Software Pvt. Ltd</a>
-                                </span>
-                            </div>
+<div class="card-body p-0 auth-content">
+    <ul class="nav-border nav nav-pills" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="/user/login" role="tab">Log In</a>
+        </li>
+    </ul>
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
+            @using (Html.BeginForm("Login", "User", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-group mb-2">
+                    @Html.LabelFor(x => x.UserName, new { @class = "form-label" })
+                    <div class="input-group">
+                        @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", placeholder = "username..." })
+                    </div>
+                    @Html.ValidationMessageFor(m => m.UserName, null)
+                </div>
+                <div class="form-group mb-2">
+                    @Html.LabelFor(x => x.Password, new { @class = "form-label" })
+                    <div class="input-group">
+                        @Html.TextBoxFor(x => x.Password, new { @class = "form-control", type = "password", placeholder = "Password here..." })
+                    </div>
+                    @Html.ValidationMessageFor(m => m.Password, null)
+                    @Html.ValidationMessageFor(m => m.ErrorMessage, null)
+                </div>
+                <div class="form-group row my-3">
+                    <div class="col-sm-6">
+                        <div class="custom-control custom-switch switch-success">
+                            <input type="checkbox" class="custom-control-input" id="customSwitchSuccess">
+                            <label class="form-label text-muted" for="customSwitchSuccess">Remember me</label>
                         </div>
                     </div>
+                    <div class="col-sm-6 text-end">
+                        <a href="/user/resetpassword" class="text-muted font-13"><i class="dripicons-lock"></i>Forgot password?</a>
+                    </div>
                 </div>
-            </div>
+                <div class="form-group mb-0 row">
+                    <div class="col-12">
+                        <button class="btn btn-primary w-100 waves-effect waves-light">Log In<i class="fas fa-sign-in-alt ms-1"></i></button>
+                    </div>
+                </div>
+                @Html.HiddenFor(x => x.ReturnUrl)
+            }
         </div>
     </div>
-    <!-- End Log In page -->
-    <!-- jQuery  -->
-    <script src="~/js/login/jquery.min.js"></script>
-    <script src="~/js/login/bootstrap.bundle.min.js"></script>
-    <script src="~/js/login/waves.js"></script>
-    <script src="~/js/login/feather.min.js"></script>
-    <script src="~/js/login/simplebar.min.js"></script>
-</body>
-</html>
+</div>
