Organisation Centrewise Sms Setting Form Creation

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/_OrganisationCentreSidePannel.cshtml
@@ -17,11 +17,15 @@
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseGSTSetup?organisationCentreId=@Model" aria-selected="true">
                     <i class="fas fa-rupee-sign"></i>
-                    <h5 class="m-0 ps-2">Centre GST Setup</h5>
+                    <h5 class="m-0 ps-2">Centre GST Setting</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseSMTPSetup?organisationCentreId=@Model" aria-selected="true">
                     <i class="fa fa-envelope-square"></i>
-                    <h5 class="m-0 ps-2">Centre SMTP Setup</h5>
+                    <h5 class="m-0 ps-2">Centre SMTP Setting</h5>
+                </a>
+                <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseSMSSetup?organisationCentreId=@Model" aria-selected="true">
+                    <i class="fa fa-comments"></i>
+                    <h5 class="m-0 ps-2">Centre SMS Setting</h5>
                 </a>
                 <a class="nav-link" href="/OrganisationCentreMaster/CentrewiseEmailTemplateSetup?organisationCentreId=@Model" aria-selected="true">
                     <i class="fas fa-envelope"></i>
